# starlark-mcp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  build.rs
.claude/skills/create-extension/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  EXTENSION_DEVELOPMENT.md  MODULES.md  TESTING.md
extensions/: cat_facts.star  cat_facts_test.star  docker.star  fuzzy_extension.star  fuzzy_extension_test.star  geoip.star  github.star  kubectl.star  plane.star  pokemon_items.json  postgres.star  sqlite.star  test_extension.star  test_extension_test.star  testing_test.star  weather.star
npm/: package.json.tmpl
npm/starlark-mcp/: README.md  package.json  tsconfig.json
npm/starlark-mcp/src/: index.ts
src/: lib.rs  main.rs
src/extensions/: loader.rs  mod.rs
src/mcp/: handlers.rs  mod.rs  rmcp_server.rs  server.rs  transport.rs
src/starlark/: data.rs  engine.rs  fuzzy.rs  http.rs  math.rs  mcp_types.rs  mod.rs  modules.rs  postgres.rs  sqlite.rs
src/testing/: assertion.rs  mod.rs  testing.rs
