[package]
name = "mcp-star"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-star"
path = "src/main.rs"

[dependencies]
starlark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
allocative = "0.3"
derive_more = "0.99"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.5"
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
regex = "1.10"
argh = "0.1"
